# cifi

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: copilot-instructions.md
.github/instrctions/: pr-instructions.md
.github/workflows/: publish-action.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/parker/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
action/: Dockerfile  entrypoint.py
cifi/: __init__.py  __main__.py  analyzer.py  config.py  ingestion.py  preprocessor.py  prompts.py  schemas.py
cifi/llm/: __init__.py  base.py  github_models.py
docs/: ARCHITECTURE.md  DATA_FLOW.md  DD.md  GITHUB_ACTION.md  HLD.md  LLM_INTEGRATION.md  NORTH_STAR.md  PLAN.md  SQUAD_ADOPTION_PLAN.md
tests/: test_action_entrypoint.py  test_analyzer.py  test_config.py  test_ingestion.py  test_integration.py  test_llm.py  test_preprocessor.py  test_prompts.py  test_schemas.py
tests/unit/: test_action_entrypoint.py  test_config.py  test_ingestion.py  test_llm.py  test_preprocessor.py  test_prompts.py
